# FPBE-First-Pimisr-Bank-Elmahrosa

./: .env  .gitignore  AtomicSwap.sol  Backend API (Node.js + NestJS)  Bank_of_the_People.md  CHAPTER_RESURRECTION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIDRegistry.sol  Daftar Layanan yang Akan Dibuatkan  DeFiLending.sol  DeFiScreen.tsx  FPBE  Frontend Mobile (React Native)  Keamanan (AES-256 + TLS 1.3)  Kontrak Pintar  LICENSE  Multi-Language & Localization Support untuk Aplikasi Perbankan PiMISR  OfflineBanking.js  OnChainCreditScore.sol  PI_NETWORK_SETUP.md  PiLogin.js  PiPayment.js  QuantumSecureContract.sol  README.md  Readme1.md  SwapScreen.tsx  TERMS_OF_SERVICE.md  VoiceBanking.js  VoiceBanking.sol  backend-api.yaml  bitcoin.yaml  blockchain_keys.db  credit-score.controller.ts  credit-score.service.ts  db.yaml  docker-compose.yml  ethereum-sdk.yaml  frontend-dev.yaml  (+18 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
UI/: UX yang Lebih Menarik + PWA + WalletConnect
app/: globals.css  layout.tsx  page.tsx  pi-sdk-loader.html
backend.py /: Multi-Currency Virtual IBAN & Wallets  VirtualIBAN.sol  VirtualWallet.js  server.js
components/: account-overview.tsx  admin-dashboard.tsx  admin-panel.tsx  ai-chat-support.tsx  auth-gate.tsx  badges-view.tsx  bottom-nav.tsx  cards-view.tsx  contributor-view.tsx  investments-view.tsx  land-purchase.tsx  land-view.tsx  loans-view.tsx  minn-app-view.tsx  phantom-swap.tsx  pi-verification-guide.tsx  pi-wallet-details.tsx  (+11 more)
programs/teos_mining/: Anchor.toml  Cargo.toml
programs/teos_mining/src/: lib.rs
(+486 files in other folders)
