[package]
name = "teos_mining"
version = "0.1.0"
description = "Ultra high-tech Anchor program for TEOS mining on Solana."
edition = "2025"
authors = ["Ayman Seif"]
license = "MIT"

[lib]
name = "teos_mining"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
solana-program = "1.18.14"

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
